[package]
name = "daveparr_minigrep"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "A simple command line tool to search for a string in a file based on 'The Rust Programming Language' book"
readme = "README.md"
repository = "https://github.com/DaveParr/minigrep"
categories = ["text-processing", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
